--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "node dev.js",
     "dev:web": "vite",
+    "build:web": "vite build",
     "package": "node build.js"
   },
   "dependencies": {
