--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "type": "module",
   "main": "index.html",
   "scripts": {
-    "dev": "node dev.js",
-    "dev:web": "vite",
-    "build:web": "vite build",
-    "package": "node build.js"
+    "dev": "vite",
+    "build": "tsc && vite build"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.5.5",
@@ -23,10 +21,6 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
-    "chokidar": "^3.5.3",
-    "nw-builder": "^4.2.2",
-    "rimraf": "^5.0.0",
-    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
