--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "spotycs",
+  "name": "spotycs-next",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "main": "index.html",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@types/node": "18.15.13",
+    "@types/react": "18.0.38",
+    "@types/react-dom": "18.0.11",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.3.1",
     "framer-motion": "^10.12.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "13.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.10.0",
+    "typescript": "5.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/uuid": "^9.0.1",
-    "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "@types/uuid": "^9.0.1"
   }
 }
